# ddtank-multi-login

./: .gitignore  Cargo.toml  README.md  build-release.ps1  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: 337.lua
src/: lib.rs  main.rs  ui.rc
src/ui/: ARCHITECTURE.md  index.htm
src/ui/css/: style.css
src/ui/htm/: add-account.htm  edit-account.htm
src/ui/js/: app.js  constants.js  form-controller.js  utils.js
